# CustomUUID

./: .gitignore  README.md  pyproject.toml
custom_uuid/: __init__.py  main.py
custom_uuid/templates/: __init__.py  main.py
