[tool.poetry]
name = "custom_uuid"
version = "11.9.23.1"
description = "Easily generate meaningful & consistent UUID's without the excessive boilerplate normally required."
authors = ["kdcokenny <kenny@kdco.llc>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
